[package]
name = "bpu_trasher"
version = "0.1.0"
homepage = "https://github.com/pseitz/bpu_trasher"
repository = "https://github.com/pseitz/bpu_trasher"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2021"
description = "A tool to trash the branch prediction unit"
categories = ["development-tools::profiling"]
license = "MIT"

[dependencies]
rand = "0.8.5"
